do Special Form. Special Forms fixes. Cleanup